peac_dev/force-app/main/default/objects/Payee__c/Payee__c.object-meta.xml
<CustomObject>
    <label>Payee</label>
    <nameField>
        <displayFormat>PAY-{000000}</displayFormat>
        <label>Payee Indentification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>