peac_dev/force-app/main/default/objects/Payee__c/fields/ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACH Account #</label>
    <length>34</length>
    <type>Text</type>
</CustomField>