peac_dev/force-app/main/default/objects/Payee__c/fields/ACH_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Type__c</fullName>
    <label>ACH Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Financial Institution GL</fullName>
            </value>
            <value>
                <fullName>Loan Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>