peac_dev/force-app/main/default/objects/Payee__c/fields/ACH_Available__c.field-meta.xml
<CustomField>
    <fullName>ACH_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Available</label>
    <type>Checkbox</type>
</CustomField>