peac_dev/force-app/main/default/objects/Payee__c/fields/ACH_Bank_Transit__c.field-meta.xml
<CustomField>
    <fullName>ACH_Bank_Transit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACH/Bank Transit</label>
    <length>9</length>
    <type>Text</type>
</CustomField>