peac_dev/force-app/main/default/objects/Payee__c/fields/CCAN__c.field-meta.xml
<CustomField>
    <fullName>CCAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>