peac_dev/force-app/main/default/objects/Payee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact address information overrides the Dealer if the address fields exists.</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Dealer__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Dealer__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>The Contact should be related to the Dealer/Broker</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payees</relationshipLabel>
    <relationshipName>Payees</relationshipName>
    <type>Lookup</type>
</CustomField>