peac_dev/force-app/main/default/objects/Payee__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a Dealer if one exists. After selection, pressing save will default the address information into the Payee entry.</inlineHelpText>
    <label>Dealer/Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Account, Dealer_Account Development, Dealer_Account Penetration, Dealer_Close, Dealer_Discovery, Dealer_Proposal, Dealer_Qualification, Broker Account, End User Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payees</relationshipLabel>
    <relationshipName>Payees</relationshipName>
    <type>Lookup</type>
</CustomField>