peac_dev/force-app/main/default/objects/Payee__c/fields/Default_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Pay_Type__c</fullName>
    <label>Default Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
                <default>true</default>
                <label>Check</label>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>