peac_dev/force-app/main/default/objects/Payee__c/fields/EbankingExists__c.field-meta.xml
<CustomField>
    <fullName>EbankingExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EbankingExists</label>
    <type>Checkbox</type>
</CustomField>