peac_dev/force-app/main/default/objects/Payee__c/fields/Payee_ID__c.field-meta.xml
<CustomField>
    <fullName>Payee_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is typically the same as the Payee&apos;s phone number.</inlineHelpText>
    <label>Payee ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>