peac_dev/force-app/main/default/objects/Payee__c/fields/Payee_ID_Digits__c.field-meta.xml
<CustomField>
    <fullName>Payee_ID_Digits__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(Payee_ID__c, &quot;-&quot;, &quot;&quot;),
&quot;.&quot;, &quot;&quot;),
&quot; &quot;, &quot;&quot;)</formula>
    <label>Payee ID Digits</label>
    <type>Text</type>
</CustomField>