peac_dev/force-app/main/default/objects/Payee__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payee Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>