peac_dev/force-app/main/default/objects/Payee__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <label>Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedWire</fullName>
            </value>
            <value>
                <fullName>SWIFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>