peac_dev/force-app/main/default/objects/Payee__c/fields/Remittance_Address2__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Address2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance Address2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>