peac_dev/force-app/main/default/objects/Payee__c/fields/Remittance_City__c.field-meta.xml
<CustomField>
    <fullName>Remittance_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>