peac_dev/force-app/main/default/objects/Payee__c/fields/Remittance_Fax__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance Fax</label>
    <type>Phone</type>
</CustomField>