peac_dev/force-app/main/default/objects/Payee__c/fields/Remittance_Name__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>