peac_dev/force-app/main/default/objects/Payee__c/fields/Remittance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance Phone</label>
    <type>Phone</type>
</CustomField>