peac_dev/force-app/main/default/objects/Payee__c/fields/Remittance_Zip__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>