peac_dev/force-app/main/default/objects/Payee__c/fields/Sent_to_Solomon__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Solomon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent to Solomon</label>
    <type>DateTime</type>
</CustomField>