peac_dev/force-app/main/default/objects/Payee__c/fields/SL_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>SL_Vendor_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SL Vendor ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>