peac_dev/force-app/main/default/objects/Payee__c/fields/Subsidy_Info__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Info__c</fullName>
    <label>Subsidy Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Panasonic -BTS</fullName>
            </value>
            <value>
                <fullName>Panasonic-Camera</fullName>
            </value>
            <value>
                <fullName>Panasonic - Projector</fullName>
            </value>
            <value>
                <fullName>Panasonic ProVideo</fullName>
            </value>
            <value>
                <fullName>Snap On - John Bean</fullName>
            </value>
            <value>
                <fullName>Snap On - Hoffmann</fullName>
            </value>
            <value>
                <fullName>Wellbilt</fullName>
            </value>
            <value>
                <fullName>EiKi</fullName>
            </value>
            <value>
                <fullName>Leicha</fullName>
            </value>
            <value>
                <fullName>Biospace</fullName>
            </value>
            <value>
                <fullName>New Tek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>