peac_dev/force-app/main/default/objects/Payee__c/fields/Tax_ID_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Nbr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID Nbr</label>
    <length>11</length>
    <type>Text</type>
</CustomField>