peac_dev/force-app/main/default/objects/Payee__c/fields/Tax_Id_Nbr_Digits__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id_Nbr_Digits__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(Tax_ID_Nbr__c, &quot;-&quot;, &quot;&quot;),
&quot;.&quot;, &quot;&quot;),
&quot; &quot;, &quot;&quot;)</formula>
    <label>Tax_Id_Nbr_Digits__c</label>
    <type>Text</type>
</CustomField>