peac_dev/force-app/main/default/objects/Payee__c/fields/Tax_ID_type__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_type__c</fullName>
    <inlineHelpText>If 1099 checked, please select EIN (Employer Identification Number) or SSN (Social Security Number) type of entry for Tax ID Nbr.</inlineHelpText>
    <label>Tax ID type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>