peac_dev/force-app/main/default/objects/Payee__c/fields/TIN_Name__c.field-meta.xml
<CustomField>
    <fullName>TIN_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TIN Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>