peac_dev/force-app/main/default/objects/Payee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>if ( CONTAINS(RecordType.Name, &quot;Lease&quot;), &quot;Lease Payee&quot;, &quot;Loan Payee&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>