peac_dev/force-app/main/default/objects/Payee__c/fields/Update_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Update_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Update Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>