peac_dev/force-app/main/default/objects/Payee__c/fields/VendorEntry__c.field-meta.xml
<CustomField>
    <fullName>VendorEntry__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>VendorEntry</label>
    <type>AutoNumber</type>
</CustomField>