peac_dev/force-app/main/default/objects/Payee__c/fields/Wire_Available__c.field-meta.xml
<CustomField>
    <fullName>Wire_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire Available</label>
    <type>Checkbox</type>
</CustomField>