peac_dev/force-app/main/default/objects/Payee__c/fields/Wire_ID__c.field-meta.xml
<CustomField>
    <fullName>Wire_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wire/Bank Transit</label>
    <length>9</length>
    <type>Text</type>
</CustomField>