peac_dev/force-app/main/default/objects/Payee__c/fields/X1099__c.field-meta.xml
<CustomField>
    <fullName>X1099__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1099</label>
    <type>Checkbox</type>
</CustomField>