peac_dev/force-app/main/default/objects/Payee__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>