peac_dev/force-app/main/default/objects/Payee__c/recordTypes/Lease_Payment.recordType-meta.xml
<RecordType>
    <fullName>Lease_Payment</fullName>
    <active>true</active>
    <description>Payee for a Lease Payment</description>
    <label>Lease Payment</label>
</RecordType>