peac_dev/force-app/main/default/objects/Payee__c/recordTypes/Loan_Payment.recordType-meta.xml
<RecordType>
    <fullName>Loan_Payment</fullName>
    <active>true</active>
    <description>Payee for a Loan Payment</description>
    <label>Loan Payment</label>
</RecordType>