peac_dev/force-app/main/default/objects/Payee__c/validationRules/ACH_ACCOUNT_NUMBER.validationRule-meta.xml
<ValidationRule>
    <fullName>ACH_ACCOUNT_NUMBER</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!ISBLANK(ACH_Account_Number__c), 
!ISNUMBER(ACH_Account_Number__c)
)</errorConditionFormula>
    <errorDisplayField>ACH_Account_Number__c</errorDisplayField>
    <errorMessage>ACH Account # should be numeric.</errorMessage>
</ValidationRule>