peac_dev/force-app/main/default/objects/Payee__c/validationRules/ACHAvailable.validationRule-meta.xml
<ValidationRule>
    <fullName>ACHAvailable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ACH_Available__c == true,
(OR(LEN(ACH_Bank_Transit__c) == 0,LEN(ACH_Account_Number__c) == 0)  ))</errorConditionFormula>
    <errorDisplayField>ACH_Available__c</errorDisplayField>
    <errorMessage>ACH Available requires valid entries in ACH/Bank Transit and ACH Account #</errorMessage>
</ValidationRule>