peac_dev/force-app/main/default/objects/Payee__c/validationRules/Address1Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address1Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(Address1__c) = 0)</errorConditionFormula>
    <errorDisplayField>Address1__c</errorDisplayField>
    <errorMessage>Address1 required</errorMessage>
</ValidationRule>