peac_dev/force-app/main/default/objects/Payee__c/validationRules/CityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CityRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(City__c) = 0)</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>City Required</errorMessage>
</ValidationRule>