peac_dev/force-app/main/default/objects/Payee__c/validationRules/DefaultPayType.validationRule-meta.xml
<ValidationRule>
    <fullName>DefaultPayType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Default_Pay_Type__c,&apos;ACH&apos;),ACH_Available__c == false)</errorConditionFormula>
    <errorDisplayField>Default_Pay_Type__c</errorDisplayField>
    <errorMessage>Default Paytype of ACH Requires ACH to be available.</errorMessage>
</ValidationRule>