peac_dev/force-app/main/default/objects/Payee__c/validationRules/DefaultPayTypeWire.validationRule-meta.xml
<ValidationRule>
    <fullName>DefaultPayTypeWire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Default_Pay_Type__c,&apos;Wire&apos;),Wire_Available__c == false)</errorConditionFormula>
    <errorDisplayField>Default_Pay_Type__c</errorDisplayField>
    <errorMessage>Default Paytype of Wire Requires Wire to be available.</errorMessage>
</ValidationRule>