peac_dev/force-app/main/default/objects/Payee__c/validationRules/EmailRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(Email__c) = 0)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email required</errorMessage>
</ValidationRule>