peac_dev/force-app/main/default/objects/Payee__c/validationRules/FaxRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FaxRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Fax__c) = 0)</errorConditionFormula>
    <errorDisplayField>Fax__c</errorDisplayField>
    <errorMessage>Fax required</errorMessage>
</ValidationRule>