peac_dev/force-app/main/default/objects/Payee__c/validationRules/PayeeNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PayeeNameRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Payee_Name__c) = 0)</errorConditionFormula>
    <errorDisplayField>Payee_Name__c</errorDisplayField>
    <errorMessage>Payee Name required</errorMessage>
</ValidationRule>