peac_dev/force-app/main/default/objects/Payee__c/validationRules/PhoneRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Phone__c) = 0)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone required</errorMessage>
</ValidationRule>