peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittanceAddress1Required.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittanceAddress1Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(Remittance_Address1__c) = 0)</errorConditionFormula>
    <errorDisplayField>Remittance_Address1__c</errorDisplayField>
    <errorMessage>Remittance Address1 required</errorMessage>
</ValidationRule>