peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittanceCityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittanceCityRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(Remittance_City__c) = 0)</errorConditionFormula>
    <errorDisplayField>Remittance_City__c</errorDisplayField>
    <errorMessage>Remittance City required</errorMessage>
</ValidationRule>