peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittanceFaxRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittanceFaxRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Remittance_Fax__c) = 0)</errorConditionFormula>
    <errorDisplayField>Remittance_Fax__c</errorDisplayField>
    <errorMessage>Remittance Fax required</errorMessage>
</ValidationRule>