peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittanceNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittanceNameRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(Remittance_Name__c) = 0)</errorConditionFormula>
    <errorDisplayField>Remittance_Name__c</errorDisplayField>
    <errorMessage>Remittance Name required</errorMessage>
</ValidationRule>