peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittancePhoneRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittancePhoneRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Remittance_Phone__c) = 0)</errorConditionFormula>
    <errorDisplayField>Remittance_Phone__c</errorDisplayField>
    <errorMessage>Remittance Phone required</errorMessage>
</ValidationRule>