peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittanceStateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittanceStateRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(Remittance_State__c)))</errorConditionFormula>
    <errorDisplayField>Remittance_State__c</errorDisplayField>
    <errorMessage>Remittance State Required</errorMessage>
</ValidationRule>