peac_dev/force-app/main/default/objects/Payee__c/validationRules/RemittanceZipRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RemittanceZipRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN(Remittance_Zip__c) = 0)</errorConditionFormula>
    <errorDisplayField>Remittance_Zip__c</errorDisplayField>
    <errorMessage>Remittance Zip required</errorMessage>
</ValidationRule>