peac_dev/force-app/main/default/objects/Payee__c/validationRules/StateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StateRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(State__c)))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>State Required</errorMessage>
</ValidationRule>