peac_dev/force-app/main/default/objects/Payee__c/validationRules/WIRE_ACCOUNT_NUMBER.validationRule-meta.xml
<ValidationRule>
    <fullName>WIRE_ACCOUNT_NUMBER</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
!ISBLANK(Wire_Account_Number__c), 
!ISNUMBER(Wire_Account_Number__c) 
)</errorConditionFormula>
    <errorDisplayField>Wire_Account_Number__c</errorDisplayField>
    <errorMessage>Wire Account # must be numeric</errorMessage>
</ValidationRule>