peac_dev/force-app/main/default/objects/Payee__c/validationRules/WireAvailable.validationRule-meta.xml
<ValidationRule>
    <fullName>WireAvailable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Wire_Available__c== true, 
(OR(LEN(Wire_ID__c) == 0,LEN(Wire_Account_Number__c) == 0) ))</errorConditionFormula>
    <errorDisplayField>Wire_Available__c</errorDisplayField>
    <errorMessage>Wire Available requires valid entries in Wire/Bank Transit and Wire Account #</errorMessage>
</ValidationRule>