peac_dev/force-app/main/default/objects/Payee__c/validationRules/ZipRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Zip__c) = 0)</errorConditionFormula>
    <errorDisplayField>Zip__c</errorDisplayField>
    <errorMessage>Zip required</errorMessage>
</ValidationRule>